k8s/goapp-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-cluster-ip-service
  labels:
    app: books
spec:
  type: ClusterIP
  selector:
    app: books
  ports:
    - port: 8080
      targetPort: 8080
