k8s/psql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    tier: postgres
  ports:
    - port: 5432
      targetPort: 5432
